fix: configurações pra deploy no Rai